# molscore

./: LICENSE  README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: COMPSPEC.md  USECASES.md
molscore/: __init__.py  config.json  config.py  data.py  dataset.py  handler.py
molscore/tests/: test_config.py  test_test.py
tests/: conftest.py  test___init__.py  test_config.py  test_data.py
