[metadata]
name = molscore
version = 0.0.1
author = Evan Komp
author_email = komp.evan@gmail.com
description = Contextualizes sets of molecules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EvanKomp/molscore
project_urls =
    Bug Tracker = https://github.com/EvanKomp/molscore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = molscore
packages = find:
python_requires = >=3.6

[options.packages.find]
where = molscore